A few spelling fixes

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -525,7 +525,7 @@ combinedsyndicates.29.a:0 "Elizabeth Gurley Flynn"
 combinedsyndicates.29.b:0 "Benjamin Gitlow"
 combinedsyndicates.29.c:0 "Norman Thomas"
 combinedsyndicates.99.t:0 "Electing a General Secretary"
-combinedsyndicates.99.d:0 "Now that our republic has been formalized into a federal republic balancing the power of the states with the power of the federal government, it is time to to choose a general secretary to lead America. Three people have stepped forward that could be potential leaders. Elizabeth Gurley Flynn, Benjamin Gitlow, and Norman Thomas. The question now is who shall the people choose?"
+combinedsyndicates.99.d:0 "Now that our republic has been formalised into a federal republic balancing the power of the states with the power of the federal government, it is time to to choose a general secretary to lead America. Three people have stepped forward that could be potential leaders. Elizabeth Gurley Flynn, Benjamin Gitlow, and Norman Thomas. The question now is who shall the people choose?"
 combinedsyndicates.99.a:0 "Elizabeth Gurley Flynn"
 combinedsyndicates.99.b:0 "Benjamin Gitlow"
 combinedsyndicates.99.c:0 "Norman Thomas"
@@ -627,7 +627,7 @@ combinedsyndicates.50.d:0 "With the success of the Revolution on the North Ameri
 combinedsyndicates.50.a:0 "The Young Republic needs every single one of them!"
 combinedsyndicates.50.b:0 "Former reactionaries commanding a revolutionary army!? Bah!"
 combinedsyndicates.51.t:0 "Fate of Hollywood"
-combinedsyndicates.51.d:0 "With California finally under our control, we need to decide what to do with its film industry. Our leadership is divided between leaving the studios to their own devices (Barring our new film censorship and approval board) and purging the whole area and using the money to create something more useful to the state. While purging and industrializing the area would speed California's recovery, the studios make a lot of taxable money, and our citizens will be upset at the loss of entertainment."
+combinedsyndicates.51.d:0 "With California finally under our control, we need to decide what to do with its film industry. Our leadership is divided between leaving the studios to their own devices (Barring our new film censorship and approval board) and purging the whole area and using the money to create something more useful to the state. While purging and industrialising the area would speed California's recovery, the studios make a lot of taxable money, and our citizens will be upset at the loss of entertainment."
 combinedsyndicates.51.a:0 "Leave them alone, we have enough control."
 combinedsyndicates.51.b:0 "Hollywood belongs to its workers!"
 combinedsyndicates.51.c:0 "Purge the area and build something useful!"
@@ -679,7 +679,7 @@ combinedsyndicates.212.t:0 "The Treaty reaps its benefits"
 combinedsyndicates.212.d:0 "The Treaty we have signed with the American Government has finally begun to reap its benefits. As promised the Americans have helped to build up our industry throughout Mexico. Men and women from the southwest of America have migrated into Mexico and plenty of them are fit for fighting duty to defend the Mexico from Reactionary capitalists. "
 combinedsyndicates.212.a:0 "Gracias Camaradas!"
 combinedsyndicates.213.t:0 "Aiding Central America"
-combinedsyndicates.213.d:0 "War has broken out in central America between Centroamerica and the United Provinces. Our comrades in the Central America are asking us now that the civil war in America is done to help them in their own fight against capitalism and reactionary forces. "
+combinedsyndicates.213.d:0 "War has broken out in central America between Centroamérica and the United Provinces. Our comrades in the Central America are asking us now that the civil war in America is done to help them in their own fight against capitalism and reactionary forces. "
 combinedsyndicates.213.a:0 "Lets Aid our Comrades!"
 combinedsyndicates.213.b:0 "We need to focus on America"
 combinedsyndicates.214.t:0 "Aid from America!"
@@ -689,22 +689,22 @@ combinedsyndicates.215.t:0 "Central American War is over"
 combinedsyndicates.215.d:0 "For good or for ill are volunteers have arrived back in America following the war in central America. Our soldiers seemed to have learned much fighting in Central America."
 combinedsyndicates.215.a:0 "Welcome Home"
 combinedsyndicates.216.t:0 "War against the United Provinces?"
-combinedsyndicates.216.d:0 "Centroamerica has fallen to the United Provinces and we have a number of exiles and refuges in America who are asking us to go to war with the corrupt United Provinces of Central America. Many within the government are also in favor of using our influence to smash capitalism in the region."
-combinedsyndicates.216.a:0 "America shall Liberate Centroamerica!"
+combinedsyndicates.216.d:0 "Centroamérica has fallen to the United Provinces and we have a number of exiles and refuges in America who are asking us to go to war with the corrupt United Provinces of Central America. Many within the government are also in favor of using our influence to smash capitalism in the region."
+combinedsyndicates.216.a:0 "America shall Liberate Centroamérica!"
 combinedsyndicates.216.b:0 "We need to focus on America First"
 
 combinedsyndicates.217.t:0 "A Revolution in Cuba?"
 combinedsyndicates.217.d:0 "The Island of Cuba lays under control of corrupt capitalist leaders. The conditions of the Cuban people are horrible and a number of syndicalist leaders have come America seeking our help in supporting a revolution on the Island that can oust the corrupt regime and put the people into power. "
 combinedsyndicates.217.a:0 "Let us help our Cuban Comrades!"
 combinedsyndicates.218.t:0 "Syndicalist Uprising!"
-combinedsyndicates.218.d:0 "Numerous rebel groups have risen up throughout Cuba, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometers west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
+combinedsyndicates.218.d:0 "Numerous rebel groups have risen up throughout Cuba, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometres west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
 combinedsyndicates.218.a:0 "The Cuban Revolutionaries are victorious!"
 combinedsyndicates.218.b:0 "The Cuban Army smashes the rebels!"
 combinedsyndicates.219.t:0 "Cuban Revolution is victorious!"
 combinedsyndicates.219.d:0 "We have received word from Cuba that the revolution is successful. A new government by the Cuban People is in Power. One less island in the Caribbean is enslaved by capitalism."
 combinedsyndicates.219.a:0 "Great Work Comrades!"
 combinedsyndicates.220.t:0 "Cuban Revolution has failed"
-combinedsyndicates.220.d:0 "We have received word from Cuba that the revolution has failed. Despite the great valor of our comrades in Cuba, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
+combinedsyndicates.220.d:0 "We have received word from Cuba that the revolution has failed. Despite the great valour of our comrades in Cuba, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
 combinedsyndicates.220.a:0 "We shall go to Cuba and Liberate the Cubans!"
 combinedsyndicates.220.b:0 "It is not worth a war over"
 combinedsyndicates.221.t:0 "Revolutionary Thanks"
@@ -722,7 +722,7 @@ combinedsyndicates.224.t:0 "Haitian Revolution is victorious!"
 combinedsyndicates.224.d:0 "We have received word from Haiti that the revolution is successful. A new government by the Haitian People is in Power. One less country in the Caribbean is enslaved by capitalism."
 combinedsyndicates.224.a:0 "Great Work Comrades!"
 combinedsyndicates.225.t:0 "Haitian Revolution has failed"
-combinedsyndicates.225.d:0 "We have received word from Haiti that the revolution has failed. Despite the great valor of our comrades in Haiti, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
+combinedsyndicates.225.d:0 "We have received word from Haiti that the revolution has failed. Despite the great valour of our comrades in Haiti, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
 combinedsyndicates.225.a:0 "We shall go to Haiti and Liberate the Haitians!"
 combinedsyndicates.225.b:0 "It is not worth a war over"
 combinedsyndicates.226.t:0 "Revolutionary Thanks"
@@ -733,7 +733,7 @@ combinedsyndicates.227.t:0 "A Revolution in The Dominican Republic?"
 combinedsyndicates.227.d:0 "The country of The Dominican Republic lays under control of corrupt capitalist leaders. The conditions of the Dominican people are horrible and a number of syndicalist leaders have come America seeking our help in supporting a revolution in the The Dominican Republic that can oust the corrupt regime and put the people into power. "
 combinedsyndicates.227.a:0 "Let us help our Dominican Comrades!"
 combinedsyndicates.228.t:0 "Syndicalist Uprising!"
-combinedsyndicates.228.d:0 "Numerous rebel groups have risen up throughout The Dominican Republic, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometers west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
+combinedsyndicates.228.d:0 "Numerous rebel groups have risen up throughout The Dominican Republic, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometres west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
 combinedsyndicates.228.a:0 "The Dominican Revolutionaries are victorious!"
 combinedsyndicates.228.b:0 "The Dominican Army smashes the rebels!"
 combinedsyndicates.229.t:0 "Dominican Revolution is victorious!"
@@ -751,7 +751,7 @@ combinedsyndicates.232.t:0 "A Revolution in Panama?"
 combinedsyndicates.232.d:0 "The country of Panama lays under control of corrupt capitalist leaders. The conditions of the Panamanian people are horrible and a number of syndicalist leaders have come America seeking our help in supporting a revolution in the Panama that can oust the corrupt regime and put the people into power. "
 combinedsyndicates.232.a:0 "Let us help our Dominican Comrades!"
 combinedsyndicates.233.t:0 "Syndicalist Uprising!"
-combinedsyndicates.233.d:0 "Numerous rebel groups have risen up throughout Panama, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometers west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
+combinedsyndicates.233.d:0 "Numerous rebel groups have risen up throughout Panama, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometres west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
 combinedsyndicates.233.a:0 "Panamanian Revolutionaries are victorious!"
 combinedsyndicates.233.b:0 "The Panamanian Army smashes the rebels!"
 combinedsyndicates.234.t:0 "Panamanian Revolution is victorious!"
@@ -766,8 +766,8 @@ combinedsyndicates.236.d:0 "With our revolution successful. We should work to re
 combinedsyndicates.236.a:0 "Gracias Camaradas!"
 
 combinedsyndicates.237.t:0 "Fate of the Canal?"
-combinedsyndicates.237.d:0 "With control of the Canal in our hands the question is now what to do with it. Some suggest that we should give it to Centroamerica, while others suggest that we give it to the Panamanians. While others suggest that we should keep it since it was built by Americans. "
-combinedsyndicates.237.a:0 "Give it to Centroamerica"
+combinedsyndicates.237.d:0 "With control of the Canal in our hands the question is now what to do with it. Some suggest that we should give it to Centroamérica, while others suggest that we give it to the Panamanians. While others suggest that we should keep it since it was built by Americans. "
+combinedsyndicates.237.a:0 "Give it to Centroamérica"
 combinedsyndicates.237.b:0 "Give it to Panama"
 combinedsyndicates.237.c:0 "Keep it"
 combinedsyndicates.238.t:0 "America has given us the Canal"
