A few more spelling fixes

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -35,9 +35,9 @@ POL_euro_block_idea_desc:0 "Joining Germany's economic bloc serves to strengthen
 POL_an_absolute_monarch_idea:0 "An Absolute Monarch"
 POL_an_absolute_monarch_idea_desc:0 "All authority rests in the hands of the monarch."
 POL_centralized_state_idea:0 "A Centralised State"
-POL_centralized_state_idea_desc:0 "The nobles have been undercut at every turn, hurtign theri  ability to influence the government."
+POL_centralized_state_idea_desc:0 "The nobles have been undercut at every turn, hurting their ability to influence the government."
 POL_a_new_sejm_idea:0 "A New Sejm"
-POL_a_new_sejm_idea_desc:0 "Ther reformed Sejm is more capable of reacting to new threats and making important decisions."
+POL_a_new_sejm_idea_desc:0 "The reformed Sejm is more capable of reacting to new threats and making important decisions."
 POL_trade_reform_idea:0 "International Trade Reform"
 POL_trade_reform_idea_desc:0 "Reforming our trade policy will keep us competitive in foreign markets."
 POL_poland_forever_idea:0 "Poland Forever"
@@ -238,7 +238,7 @@ POL_minstry_of_public_security_desc:0 "We must establish the Ministry of Public 
 POL_international_agents_desc:0 "If we are to perform international acts of subversion in the name of Syndicalism, we must first gather like-minded individuals in other nations. Polish citizens living abroad are the perfect candidates for recruitment."
 POL_spread_the_revolution_desc:0 "The revolution defies borders, and must be spread as far and wide as it possibly can be!"
 POL_redistribute_wealth_desc:0 "The old monarchy had cruelly seized all of the nation's wealth for itself, crushing the polish people under their gilded boot-heels. We must redistribute this wealth to the people!"
-POL_centralize_infrastructure_desc:0 "Poland is a nation of farms and agriculture, but if we are to enter the modern age, we must become a nation of factories and industry. Centralising our infrastructure is the first step towrds a full industrial revolution."
+POL_centralize_infrastructure_desc:0 "Poland is a nation of farms and agriculture, but if we are to enter the modern age, we must become a nation of factories and industry. Centralising our infrastructure is the first step towards a full industrial revolution."
 POL_farmers_reform_desc:0 "Much of Poland's farming is still being done with antiquated methods, unfit for the 20th century. We must introduce these farmers to modern machinery to improve their capabilities."
 POL_reform_banks_desc:0 "The Bank of Poland is the largest bank in the nation, and has failed in the wake of Black Monday. Restructuring the bank and saving it from total collapse is the first step in our recovery from the Black Monday disaster."
 POL_currency_reevaluation_desc:0 "Poland has used the Reichsmark ever since the end of the Weltkrieg. Now that German currency is in free-fall, it is time to reintroduce a new Polish currency, the Złoty."
@@ -246,7 +246,7 @@ POL_the_new_polish_worker_desc:0 "We must introduce a new culture of hard work a
 POL_international_railways_desc:0 "Poland sits in the centre of Europe, which allows us a strong opportunity to present ourselves as the railway hub of Europe. These new rail lines could prove a valuable asset in encouraging trade with neighbouring countries."
 POL_the_munitions_district_desc:0 "By setting aside specific districts in each city for military and munitions production, we can create special infrastructure which facilitates the production of arms and improve our industrial capacity."
 POL_more_munitions_desc:0 "Factories are the way of the future, and we need more of them if we are to remain competitive on the world stage."
-POL_modernization_munitions_desc:0 "Even with new factories populating our cities, we still need to improve our concepts of how they sohuld work. By introducing modern assembly lines we can improve the efficiency of our factories country-wide."
+POL_modernization_munitions_desc:0 "Even with new factories populating our cities, we still need to improve our concepts of how they should work. By introducing modern assembly lines we can improve the efficiency of our factories country-wide."
 POL_research_slot_desc:0 "The private sector, long-ignored as a means of economic development, should be encouraged to instigate their own initiatives and further their own research."
 POL_more_factories_desc:0 "Funding the expansion of industrial corporations across the country will further increase the industrial capacity of the nation."
 POL_factories_desc:0 "Congress Poland has long been an agricultural centre of the nation, however that land could be better used in order to create more factories for our war effort."
@@ -282,12 +282,12 @@ POL_mendog_iii_desc:0 "With the election of Mendog III, the new king must secure
 POL_vilinus_accord:0 "The Vilnius Accord"
 POL_vilinus_accord_desc:0 "With the volatile political situation being what it is, Poland and Lithuania must stand together and sign a defensive agreement to secure the defences of both nations."
 POL_renewed_nationalism:0 "Renewed Nationalism"
-POL_renewed_nationalism_desc:0 "With a true Polish King at the helm of the nation, it is becoming easier for the people to be proud of their nation, as it has overthrown the shackles of foreign influence. We should encourage this behavior, as it strengthns the unity of the nation."
+POL_renewed_nationalism_desc:0 "With a true Polish King at the helm of the nation, it is becoming easier for the people to be proud of their nation, as it has overthrown the shackles of foreign influence. We should encourage this behaviour, as it strengthens the unity of the nation."
 POL_the_peoples_king:0 "The People's King"
 POL_the_peoples_king_desc:0 "Augustyn I Czartoryski, or "The People's King" as he is becoming known, serves as a unifying force throughout the nation, encouraging Polish soldiers to defend their homes with tooth and nail, and force the enemy to bleed for every inch of Polish soil they take."
 POL_prussian_partition:0 "The Prussian Partition"
 POL_prussian_partition_desc:0 "The German Empire is showing weakness and is distracted by a cataclysmic war. This is a perfect opportunity for us to reassert our claims to the Polish land Germany unjustly holds in their clutches."
-POL_ukranian_alliance:0 "A Ukranian Allaince"
+POL_ukranian_alliance:0 "A Ukrainian Alliance"
 POL_ukranian_alliance_desc:0 "Our neighbor Ukraine has joined us in becoming a Syndicalist power, and it is only natural that we approach them with an offer of alliance."
 POL_central_arms:0 "Państwowe Wytwórnie Uzbrojenia"
 POL_central_arms_desc:0 "The Państwowe Wytwórnie Uzbrojenia is an industrial conglomerate that controls a large portion of Polish arms manufacturing. Increasing their authority and giving them leiencies in the law will allow them to further strengthen Polish arms manufacturing." #WTF is "leiencies"???
@@ -301,7 +301,7 @@ POL_expand_airbase:0 "Expand our Air Defences"
 POL_expand_airbase_desc:0 "Even if Poland cannot afford to create a strong airforce of her own, we can still afford to shoot down other nation's air forces. Improving our national anti-air defences will certainly come in handy in the event of hostilities."
 POL_brest_livotsk:0 "Return of Brest-Litovsk"
 POL_brest_livotsk_desc:0 "With our close ties to GErmany, we have a unique opportunity to diplomatically press our claims to the region around Brest-Livotsk. This region is rightfully ours, and the world must know this."
-POL_sieze_galicia:0 "Sieze Galicia"
+POL_sieze_galicia:0 "Seize Galicia"
 POL_sieze_galicia_desc:0 "Galicia is a rightful part of Poland, and we must press our claims to the region! Galicia will be returned to rightful Polish control!"
 POL_radek_policy:0 "Radek's New Policy"
 POL_radek_policy_desc:0 "With a new government comes new economic policy. All nations who do not follow the rightful Syndicalist banner cannot strip Poland of her rightful resources!"
@@ -906,10 +906,10 @@ poland.135.d:0 "With the collapse of Germany and the Mitteleuropa alliance, we h
 poland.135.a:0 "Unfortunately, we need them."
 poland.135.b:0 "Never!"
 poland.136.t:0 "Austria Denies our Request"
-poland.136.d:0 "Austria has denied us dominion over Galicia, favoring the current administration over our own."
+poland.136.d:0 "Austria has denied us dominion over Galicia, favouring the current administration over our own."
 poland.136.a:0 "Outrageous!"
 poland.137.t:0 "Austria Acquiesces"
-poland.137.d:0 "Austria has rightfully agreed to return the long-lost territory of Galicia to our rightful rulership, and has begun enacting procedures for the transfer of territory. This is a wonderful day for the Polish people."
+poland.137.d:0 "Austria has rightfully agreed to return the long-lost territory of Galicia to our rightful control, and has begun enacting procedures for the transfer of territory. This is a wonderful day for the Polish people."
 poland.137.a:0 "Fantastic!"
 poland.138.t:0 "The Return of Krakow"
 poland.138.d:0 "While not outright denying our claims to Galicia, Austria has instead proposed that we take dominion only over the Polish-majority region of Krakow, and leave the rest to the current administrators. While this is not ideal, it is certainly welcome to own the historic city of Krakow again after all these years."
@@ -934,7 +934,7 @@ poland.144.t:0 "The Kaiser Agrees"
 poland.144.d:0 "Germany has agreed to our proposal for the cession of Poznan in exchange for us renouncing our claims on other Polish territory they hold. With this transfer of territory, we can now welcome back millions of our brethren back into Poland proper."
 poland.144.a:0 "R-really?"
 poland.145.t:0 "An Unacceptable Trade"
-poland.145.d:0 "The Kaiser has flatly denied our request for territory, staing that they only deal with "proper nations" and that we should learn our place in the European hierarchy. It seems like we shall not be seeing Poznan under our care for some time."
+poland.145.d:0 "The Kaiser has flatly denied our request for territory, stating that they only deal with "proper nations" and that we should learn our place in the European hierarchy. It seems like we shall not be seeing Poznan under our care for some time."
 poland.145.a:0 "To be expected..."
 poland.146.t:0 "Poland Seeks Protection"
 poland.146.d:0 "Looking outward from their current precarious position in Europe, the nascent Polish Republic has come to us with a request to join our alliance. While Poland is diplomatically isolated in Europe, it could prove worthwhile to have another ally in Europe, no matter how small."
