--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -347,7 +347,7 @@ tram.90.d:0 "Today, our colonial governor, general Yui Mitsuei died in age of 79
 tram.90.a:0 "Does it mean we are no longer independent?"
 
 tram.91.t:0 "Yui Mitsuei dies"
-tram.91.d:0 "Today, our governor in Trasamur, general Yui Mitsuei died in age of 79. Pro-Japanese politicians in Vladivostok Duma have decided to become a new prefecture of our empire. Shall we accept their deal?"
+tram.91.d:0 "Today, our governor in Transamur, general Yui Mitsuei died in age of 79. Pro-Japanese politicians in Vladivostok Duma have decided to become a new prefecture of our empire. Shall we accept their deal?"
 tram.91.a:0 "Indeed"
 
 tram.92.t:0 "Find support from Russia?"
