--- a/localisation/KR_Legation_Cities_l_english.yml
+++ b/localisation/KR_Legation_Cities_l_english.yml
@@ -79,7 +79,7 @@ LEC_big_trouble_in_shanghai:0 "Big trouble in Shanghai"
 LEC_side_with_the_establishment:0 "Side with the establishment"
 LEC_police_1:0 "Expand the police force"
 LEC_police_2:0 "Draconian measures"
-LEC_police_3:0 "Militarized police force"
+LEC_police_3:0 "Militarised police force"
 LEC_investigate_begin:0 "Investigate the Triads"
 LEC_investigate_jiang:0 "The case of Jiang Qing"
 LEC_investigate_huang:0 "The case of Huang Jinrong"
@@ -140,7 +140,7 @@ LEC_seek_investment_NATFRA:0 "Seek investment from France"
 LEC_seek_investment_CAN:0 "Seek investment from Canada"
 
 ### Events ###
-legcities.1.t:0 "The Criminalisation of the Officials"
+legcities.1.t:0 "The Corruption of Officials"
 legcities.1.d:0 "The Legation Cities have always lawless, but the recent downturn in the global economy has made matters worse. Smuggling into A.O.G. territory has increased, and the Legation Council has been unable to pay its civil servants for several months now. Many constables and customs officials are beginning to turn to the underworld for new sources of income. We have always needed to work with the secret criminal fraternities, but now it seems they are taking on more power than our government..."
 legcities.1.a:0 "Do nothing"
 legcities.1.b:0 "Grant the Crime Bosses positions on the Council"
