--- a/localisation/KR_Piratini_l_english.yml
+++ b/localisation/KR_Piratini_l_english.yml
@@ -51,7 +51,7 @@ PIR_miltech:0 "Military Technology Effort"
 PIR_farrapo_legacy:0 "Tattered Spirit"
 PIR_navy:0 "Navy of Rio Grande"
 PIR_lavoro_famoso:0 "Lavoro Famoso"
-PIR_rio_grande:0 "Modernize Porto Alegre Shipyards"
+PIR_rio_grande:0 "Modernise Porto Alegre Shipyards"
 PIR_sea_brigands:0 "Sea Brigands"
 PIR_elite:0 "Specialist Training"
 PIR_air:0 "Airforce of Rio Grande"
