fixed names in quotes

--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -22,7 +22,7 @@ LOADING_TIP_19:0 "The party must be ready to put into its program the definite s
 LOADING_TIP_20:0 "At heart and in their daily action the trade unions are revolutionary. Their unchangeable policy is to withhold from the exploiters all they have the power to. \n- William Z. Foster"
 LOADING_TIP_21:0 "Exceptional circumstances require exceptional measures. That's why imprisonment of Nicholas and his wife are justified by events... \n- Cyril Vladimirovich, Grand Duke of Russia"
 LOADING_TIP_22:0 "I am the last monarch of the old school. It's my job to protect my peoples from their politicians! \n- Franz Joseph I to Theodore Roosevelt 1910"
-LOADING_TIP_23:0 "People always have been the foolish victims of deception and self-deception in politics. \n- Lenin"
+LOADING_TIP_23:0 "People always have been the foolish victims of deception and self-deception in politics. \n- Vladimir Lenin"
 LOADING_TIP_24:0 "At a time of revolution we cannot allow freedom for the enemies of the people and of the revolution. That is a surely clear, irrefutable conclusion. \n- Nikolai Bukharin"
 LOADING_TIP_25:0 "The ideally non-violent state will be an ordered anarchy. That State is the best governed which is governed the least. \n- Mohandas Karamchand Gandhi"
 LOADING_TIP_26:0 "Does one have to be God-fearing and Christian to be decent? \n- Louise Bryant"
@@ -101,7 +101,7 @@ LOADING_TIP_97:0 "All that we do, every action, should correspond to the highest
 LOADING_TIP_98:0 "Kill it as you would a rattlesnake and smash those who follow it, speak for it or support it. They are dangerous enemies. \n- Leonard Wood on left-wing radicalism."
 LOADING_TIP_99:0 "Now the sword must decide. In the midst of peace we have been attacked. We will advance with God by our side, as he was with our forefathers. \n- Kaiser Wilhelm II"
 LOADING_TIP_100:0 "This is not an age of dreams and fancies; it is an age of iron, in which an iron spirit and an iron will are needed by men to cut their path through victory. \n- Oswald Mosley"
-LOADING_TIP_101:0 "We are on the verge of events, the likes of which the world has not seen in a thousand years. Soon everything that constitutes our lives will strike the world as useless. \n- Wrangel"
+LOADING_TIP_101:0 "We are on the verge of events, the likes of which the world has not seen in a thousand years. Soon everything that constitutes our lives will strike the world as useless. \n- Pyotr Wrangel"
 LOADING_TIP_102:0 "One day, the Great Russian Republic will be much stronger, richer and freer than the old Tsarist Empire. But how much blood will be shed. \n- Boris Savinkov"
 LOADING_TIP_103:0 "There is one certainty of the future of a people of the resources, intelligence and character of the people of the United States—that is, prosperity. \n- Herbert Hoover"
 LOADING_TIP_104:0 "I prefer a government run like hell by Filipinos to a government run like heaven by Americans. \n- Manuel L. Quezon"
