Fixed a bunch of Georgian minister names that were incorrect and/or Russian names

--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -12593,7 +12593,7 @@
 	### Head of Government ###
 	 GEO_Filipp_Makharadze_hog_tot:0 "Filipp Makharadze"
 	 Filipp_Makharadze_dead:0 " is incapable of holding this post."
-	 GEO_Lavrentij_Beria_hog_tot:0 "Lavrentij Beria"
+	 GEO_Lavrentij_Beria_hog_tot:0 "Lavrenti Beria"
 	 Lavrentij_Beria_dead:0 " is incapable of holding this post."
 	 GEO_Evgeni_Gegechkori_hog_rso:0 "Evgeni Gegechkori"
 	 Evgeni_Gegechkori_dead:0 " is incapable of holding this post."
@@ -12607,15 +12607,15 @@
 	 Ivane_Javakhishvili_dead:0 " is incapable of holding this post."
 	 GEO_Mikheil_G_Tsereteli_hog_ade:0 "Mikheil G. Tsereteli"
 	 Mikheil_G_Tsereteli_dead:0 " is incapable of holding this post."
-	 GEO_Alexander_Nikuradze_hog_pau:0 "Alexander Nikuradze"
+	 GEO_Alexander_Nikuradze_hog_pau:0 "Alexander Nikuradse"
 	 Alexander_Nikuradze_dead:0 " is incapable of holding this post."
 	 GEO_Shalva_Maglakelidze_hog_pau:0 "Shalva Maglakelidze"
 	 Shalva_Maglakelidze_dead:0 " is incapable of holding this post."
 
 	### Foreign Minister ###
-	 GEO_Alexander_S_Svanidze_for_tot:0 "Alexander S. Svanidze"
+	 GEO_Alexander_S_Svanidze_for_tot:0 "Alek'sandre Svanidze"
 	 Alexander_S_Svanidze_dead:0 " is incapable of holding this post."
-	 GEO_Sergey_I_Kavtaradze_for_tot:0 "Sergey I. Kavtaradze"
+	 GEO_Sergey_I_Kavtaradze_for_tot:0 "Sergo Kavtaradze"
 	 Sergey_I_Kavtaradze_dead:0 " is incapable of holding this post."
 	 GEO_Vissarion_Lominadze_for_tot:0 "Vissarion Lominadze"
 	 Vissarion_Lominadze_dead:0 " is incapable of holding this post."
@@ -12635,11 +12635,11 @@
 	 Nikoloz_Berdzenishvili_dead:0 " is incapable of holding this post."
 	 GEO_Kita_Abashidze_for_mli:0 "Kita Abashidze"
 	 Kita_Abashidze_dead:0 " is incapable of holding this post."
-	 GEO_Konstantin_A_Chkheidze_for_mli:0 "Konstantin A. Chkheidze"
+	 GEO_Konstantin_A_Chkheidze_for_mli:0 "Konstantin Chkheidze"
 	 Konstantin_A_Chkheidze_dead:0 " is incapable of holding this post."
 	 GEO_Revaz_Gabashvili_for_sco:0 "Revaz Gabashvili"
 	 Revaz_Gabashvili_dead:0 " is incapable of holding this post."
-	 GEO_Simon_Sidamon_Eristoff_for_sco:0 "Simon Sidamon Eristoff"
+	 GEO_Simon_Sidamon_Eristoff_for_sco:0 "Simon Sidamon-Eristavi"
 	 Simon_Sidamon_Eristoff_dead:0 " is incapable of holding this post."
 	 GEO_Svimon_Tsitsishvili_for_sco:0 "Svimon Tsitsishvili"
 	 Svimon_Tsitsishvili_dead:0 " is incapable of holding this post."
@@ -12679,13 +12679,13 @@
 	 Alexander_N_Eristoff_dead:0 " is incapable of holding this post."
 	 GEO_Kote_Andronikashvili_eco_ade:0 "Kote Andronikashvili"
 	 Kote_Andronikashvili_dead:0 " is incapable of holding this post."
-	 GEO_Simon_Bagration_Mukhraneli_eco_ade:0 "Simon Bagration Mukhraneli"
+	 GEO_Simon_Bagration_Mukhraneli_eco_ade:0 "Simon Bagration-Mukhraneli"
 	 Simon_Bagration_Mukhraneli_dead:0 " is incapable of holding this post."
 
 	### Security Minister ###
 	 GEO_Avel_Enukidze_sec_tot:0 "Avel Enukidze"
 	 Avel_Enukidze_dead:0 " is incapable of holding this post."
-	 GEO_Ioseb_B_Dzughashvili_sec_tot:0 "Ioseb B. Dzughashvili"
+	 GEO_Ioseb_B_Dzughashvili_sec_tot:0 "Ioseb B. Jughashvili"
 	 Ioseb_B_Dzughashvili_dead:0 " is incapable of holding this post."
 	 GEO_Vsevolod_Merkulov_sec_tot:0 "Vsevolod Merkulov"
 	 Vsevolod_Merkulov_dead:0 " is incapable of holding this post."
@@ -12699,7 +12699,7 @@
 	 Vladimir_Goguadze_dead:0 " is incapable of holding this post."
 	 GEO_Grigol_Peradze_sec_sli:0 "Grigol Peradze"
 	 Grigol_Peradze_dead:0 " is incapable of holding this post."
-	 GEO_Iosif_Baratov_sec_sli:0 "Iosif Baratov"
+	 GEO_Iosif_Baratov_sec_sli:0 "Iosib Baratashvili"
 	 Iosif_Baratov_dead:0 " is incapable of holding this post."
 	 GEO_Konstantine_Gamsakhurdia_sec_mli:0 "Konstantine Gamsakhurdia"
 	 Konstantine_Gamsakhurdia_dead:0 " is incapable of holding this post."
@@ -12711,13 +12711,13 @@
 	 Ivane_Kazbegi_dead:0 " is incapable of holding this post."
 	 GEO_Leo_Kereselidze_sec_sco:0 "Leo Kereselidze"
 	 Leo_Kereselidze_dead:0 " is incapable of holding this post."
-	 GEO_Aleksandre_Andronikashvili_sec_ade:0 "Aleksandre Andronikashvili"
+	 GEO_Aleksandre_Andronikashvili_sec_ade:0 "Aleksander Andronikashvili"
 	 Aleksandre_Andronikashvili_dead:0 " is incapable of holding this post."
 	 GEO_Archbishop_Melchizedek_sec_ade:0 "Archbishop Melchizedek"
 	 Archbishop_Melchizedek_dead:0 " is incapable of holding this post."
 	 GEO_Aslan_Beg_Abashidze_sec_ade:0 "Aslan Beg Abashidze"
 	 Aslan_Beg_Abashidze_dead:0 " is incapable of holding this post."
-	 GEO_Patriarch_Callistratus_sec_ade:0 "Patriarch Callistratus"
+	 GEO_Patriarch_Callistratus_sec_ade:0 "Patriarch Kalistrate"
 	 Patriarch_Callistratus_dead:0 " is incapable of holding this post."
 
 	### Intelligence Minister ###
@@ -12743,9 +12743,9 @@
 	 Ivane_Javakhishvili_dead:0 " is incapable of holding this post."
 
 	### Military High Command ###
-	 GEO_Lavrentij_Beria_mhc_tot:0 "Lavrentij Beria"
+	 GEO_Lavrentij_Beria_mhc_tot:0 "Lavrenti Beria"
 	 Lavrentij_Beria_dead:0 " is incapable of holding this post."
-	 GEO_Vladimir_Dekanozov_mhc_tot:0 "Vladimir Dekanozov"
+	 GEO_Vladimir_Dekanozov_mhc_tot:0 "Vladimir Dekanozishvili"
 	 Vladimir_Dekanozov_dead:0 " is incapable of holding this post."
 	 GEO_Valiko_Jugheli_mhc_sde:0 "Valiko Jugheli"
 	 Valiko_Jugheli_dead:0 " is incapable of holding this post."
@@ -12769,7 +12769,7 @@
 	 Alexander_N_Eristoff_dead:0 " is incapable of holding this post."
 	 GEO_Giorgi_Kvinitadze_mhc_ade:0 "Giorgi Kvinitadze"
 	 Giorgi_Kvinitadze_dead:0 " is incapable of holding this post."
-	 GEO_Simon_Bagration_Mukhraneli_mhc_ade:0 "Simon Bagration Mukhraneli"
+	 GEO_Simon_Bagration_Mukhraneli_mhc_ade:0 "Simon Bagration-Mukhraneli"
 	 Simon_Bagration_Mukhraneli_dead:0 " is incapable of holding this post."
 
 	### Chief of Army ###
