--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -214,11 +214,11 @@ PRF_attack_bhartiya_desc:0 "The Syndicalsts to the East have too long been a thr
 PRF_india_united:0 "India United!"
 PRF_india_united_desc:0 "Jai Hind! The subcontinent is once again ours! Now what?"
 PRF_bhutan_claims:0 "Arunachal Pradesh"
-PRF_bhutan_claims_desc:0 "During the chaos of the Weltkrieg, the traitorous Bhutanese took advantage of our weakness and occupied our frontier state of Arunachal Pradesh. It is time to demand its return."
+PRF_bhutan_claims_desc:0 "The mountainous frontier territory once known as Tawang is rightfully ours, and was seized by the traitorious Bhutanese during the chaos of the Weltkrieg. It is time to reassert our domain over the area, now that a true national government has been restablished."
 PRF_nepal_claims:0 "Our Claims Against Nepal"
-PRF_nepal_claims_desc:0 "Nepal expanded into the Indian lowlands in the chaos following the Weltkrieg. They must either return it or face the consequences."
-PRF_incorporate_madras:0 "Incorporating the Madras State"
-PRF_incorporate_madras_desc:0 "The southern Tamils must either join India willingly or be conquered - the choice is theirs."
+PRF_nepal_claims_desc:0 "Nepal expanded into the Indian lowlands in the chaos following the Weltkrieg. It is time to reassert our domain over those territories."
+PRF_incorporate_madras:0 "The Deccan States"
+PRF_incorporate_madras_desc:0 "The nations of southern India must either join India willingly or be conquered - the choice is theirs."
 PRF_claim_ceylon:0 "Claim Ceylon"
 PRF_claim_ceylon_desc:0 "By rights, Ceylon and the Andaman Islands are part of our nation's rightful territory. Their colonialism must come to an end."
 PRF_incorporate_burma:0 "Incorporating Burma"
@@ -258,6 +258,53 @@ prf.1.a:0 "Long may he live!"
 prf.2.t:0 "The Temple Entry Proclamation"
 prf.2.d:0 "Coinciding with his 25th birthday, the young maharaja of Travancore-Cohin, Shri Chithira Thirunal Balarama Varma, has today proclaimed an edict facilitating the the end of the ban on low-caste hindus - also known as avarnas - entering the state’s many temples. The edict and its author have been hailed by progressives throughout the southernmost princely state, and a great deal of others, for the humane and magnanimous act of lifting the deprived and struggling towards greater self esteem and communal respect. However, a great deal of the more conservative Hindu landlords and nawabs throughout the Federation are disgruntled at this sudden leap of modernity, fearing their control over the less fortunate might slip away amidst such edicts of equality. For now, though, the legal changes remain confined to the princely state of Travancore-Cochin."
 prf.2.a:0 "How gracious"
+prf.3.t:0 "The Passing of Krishna Raja Wadiyar IV"
+prf.3.d:0 "One of the most powerful (and richest) Hindu rulers of the nation, Krishna Raja Wadiyar IV passed away late last night at his royal palace in Mysore. He is succeeded as ruler of Mysore State by his nephew, the portly and artistic Jaya Chamarajendra."
+prf.3.a:0 "All of [Root.GetNameDef] mourns his passing!"
+prf.4.t:0 "The Proposed Princely State of Maharashtra"
+prf.4.d:0 "When the British Raj fell the Bombay Presidency was dissolved and its Maratha districts partitioned between Hyderabad, Kolhapur and other Princely States. A new State of Bombay was then created to manage the vital port-city on the Arabian Sea, directly under the control of the executive. However, there have been calls for a new grand and unitary Maratha Princely State with the same rights as Hyderabad, Mysore and Travancore-Cochin in the Council of Princes. The so called State of Maharashtra would be of imposing size and industrial capacity, but ruled by a college of the various Maratha petty princes in unison. Within the larger and older princely states, there is much opposition to the creation of a new powerful federal state which could counter the interests of the established order. However, a strong Maharashtra would mean a more efficient administration and easier access for the federal army. Will the Marathi be elevated to national prominence?"
+prf.4.a:0 "It is done! Proclaim Maharashtra a united Federal State!"
+prf.4.b:0 "Keep the Maratha districts divided"
+prf.5.t:0 "The Fifth Andra Mahasabha"
+prf.5.d:0 "The Andra Mahasabha was a people's organisation initially founded in the early 1920's to further the use of the Telugu language over the prevalence of Urdu in Hyderabad State. However, over the course of its last four conferences, the movement moved farther to the left by developing concrete political aims at enforcing compulsory education, workers' and peasants' rights as well as a progressive democratization of the Princely Federation. Currently under the leadership of the great liberal intellectual Madapati Hanumantha Rao, the Andra Mahasabha is nonetheless sharply divided between its bourgeoisie leading cadre and the mass of leftist and Syndicalist workers and peasants that constitute its core source of support. Yet in spite of these differences, the movement has just held its fifth congress and there presented a quite radical and very anti-feudal proposal for constitutional reform. As a result there has been much upheaval within the more conservative circles of the Council of Princes with the most reactionary maharajas and zamindars demanding the banning of the movement. How should the executive react?"
+prf.5.a:0 "Initiate a crackdown on these liberal demagogues!"
+prf.5.b:0 "Let these pitiful intellectuals have their petty meetings"
+prf.6.t:0 "Expanding the Temple Entry Laws"
+prf.6.d:0 "More than a year has passed since the state of Travancore-Cochin enforced a series of progressive laws to better the lot of the depressed Hindu castes, also known as untouchables, avarnas or dalits. Considered the lowest of the low within the Hindu caste system the people born into untouchability have always led a wretched existence, shunned by their betters and forced to take demeaning work.  However, Travancore-Cochin's Temple Entry Proclamation has greatly lessened the suffering of the state's avarnas and given them a new sense of communal pride. As such, Shri Chithira Thirunal Balarama Varma has now proposed to the federal government that the betterment of the downtrodden castes be made a national issue. Opposition amongst the reactionary and conservative Hindu princes remains staunch, however."
+prf.6.a:0 "Formulate federal legal protection for the depressed castes"
+prf.6.b:0 "Encourage social reform, but leave it to the various states"
+prf.6.c:0 "Who cares about those dirty dalits?"
+prf.7.t:0 "The Fate of the Rump Madras State"
+prf.7.d:0 "In many ways the albatross around the neck of the gun-salute state, the mutilated remains of the Madras Presidency has never been loyal nor affectionate towards our government. Invaded at the end of the first Indian Civil War by princely troops, the Tamils were graciously granted autonomy - remaining outside of the Federation at the cost of territorial concessions. However, Dravidian radicalism has risen in force throughout the Republic and many officers within the national army daren’t leave such an openly hostile power unchecked whilst traitors and Bolsheviks remain strong in Delhi and Calcutta. Something must be done about the Tamil state!"
+prf.7.a:0 "Madras must ascend to direct princely rule. India demands it!"
+prf.7.b:0 "Demand that they install a princely government!"
+prf.7.c:0 "Let's not antagonize any more Tamils"
+prf.8.t:0 "Princely India Demands Total Submission"
+prf.8.d:0 "Feeling threatened by the very existence of our far superior Tamil state, the geriatric and kleptocratic princes have demanded that we surrender our very independence! There can be only one answer to such a dastardly request!"
+prf.8.a:0 "The princely menace must be extinguished, to war!"
+prf.8.b:0 "Give in, we cannot oppose the might of the princes"
+prf.9.t:0 "The End of [From.GetNameDef]"
+prf.9.d:0 "Realising the futility in opposing our vast military power, the remains of [From.GetNameDef] have surrendered completely to our demands. With the peaceful integration of the remaining Tamil lands, the southern tip of the Indian continent has finally been completely unified under our control. This is a great day for the cause of Indian unification!"
+prf.9.a:0 "Strength in unity!"
+prf.10.t:0 "Princely India Demands the End of Tamil Republicanism"
+prf.10.d:0 "The gun-salute state has demanded that we end our republican government and become a princely state, but still maintaining considerable autonomy."
+prf.11.t:0 "The Formation of the Madras State"
+prf.11.d:0 "Facing the prospect of an armed confrontation between our two nations, the Madras presidency has dissolved itself and adopted a constitution de facto transforming it into a single princely state - a miniature version of our own, so to speak. Sri Ramakrishna Ranga Rao now presides over a Tamil cabinet completely in line with that of Princely India. Today, we have struck a blow for Indian greatness!"
+prf.11.a:0 "More princes, brilliant!"
+prf.12.t:0 "Integration of the Former Madras Republic"
+prf.12.d:0 "We have finally subdued the former lands of the self proclaimed Madras Republic. Our troops patrol the streets of Tiruvannamalai and all other major cities. Rural resistance is on its last legs and everywhere our victorious soldiers pass, the locals lower their eyes in submission."
+prf.12.a:0 "Brilliant"
+prf.20.t:0 "The Diwan Election of [GetYear]"
+prf.20.d:0 "The Council of Princes gathers today to elect a national diwan from among their number, to serve as the head of the Nizam's government. The winner of the election is..."
+prf.20.a:0 "Krishna Wadiyar IV of Mysore"
+prf.20.b:0 "Chithira Varma of Travancore"
+prf.20.c:0 "Rajaram II of Kolhapur"
+prf.20.e:0 "Akbar Hydari"
+prf.20.f:0 "Madapati Hanumantha Rao"
+prf.20.g:0 "Mirza Muhammad Ismail"
+prf.20.h:0 "Nawab Fazal Nawaz Jung Bahadur"
+prf.20.i:0 "Jayachamarajendra Raja Wadiyar V"
+prf.20.j:0 "Krushna Chandra Gajapati"
 prf.100.t:0 "The Council of Princes"
 prf.100.d:0 "Today the Nizam of Hyderabad, Osman Ali Khan, met with the Council of Princes as they presented to him what they believed to be a fair and just package of reforms - namely that the power of the council would be consolidated into a national diwan, elected from among their number, and that this diwan would assume the primary responsibility for restoring rule over the remainder of India. So far it is uncertain whether the Nizam will accept these proposals, or whether he would look on them as an erosion of his own personal authority. There are many, after all, who believe the Nizam himself should act as diwan...and others who say that the position should be subject to national elections, as should the positions on the council itself!"
 prf.100.a:0 "I will consider the advice of the council"
@@ -430,3 +477,64 @@ prf.181.a:0 "It's about time!"
 prf.182.t:0 "Resistance in [damage_state.GetName]!"
 prf.182.d:0 "Protests in the formerly British-puppet state of [damage_state.GetName] have grown increasingly violent as of late, spurred on by what we believe to be a democratic resistance group operating out of remote regions in the territory. Multiple terrorist bombings have accompanied the protests, and will likely continue until we fully assert control over [damage_state.GetName]'s people."
 prf.182.a:0 "This is what they call 'freedom'?!"
+prf.183.t:0 "Dealing With Bhutan"
+prf.183.d:0 "In the aftermath of the Raj's collapse, the small and virtually isolated Kingdom of Bhutan utilized the chaotic situation in Northern Assam to seize several districts at the foothills of the Himalayas. With the Bhartiya Commune pacified and Assam integrated into our fair state many of the hawks within the cabinet are demanding the return of this unlawfully occupied territory. Some are even calling for the inclusion of Bhutan into a wider customs union combined with a military treaty."
+prf.183.a:0 "Demand the return of the occupied districts!"
+prf.183.b:0 "Claim the districts and press for a friendly government!"
+prf.184.t:0 "The Demands of [From.GetNameDef]"
+prf.184.d.return:0 "We are under pressure from the resurgent Indian government in Hyderabad to secede the districts we conquered in the aftermath of the British Raj's collapse."
+prf.184.d.govt:0 "We are under pressure from the resurgent Indian government in Delhi to secede the districts we conquered in the aftermath of the British Raj's collapse. Furthermore the Indians demand that we surrender our de facto independence."
+prf.184.a:0 "We have no choice but to comply"
+prf.184.b:0 "Tell them that mighty Bhutan shall defend her conquests!"
+prf.185.t:0 "Bhutan Submits"
+prf.185.d.return:0 "Left with little choice, the [From.GetAdjective] government has turned our territory back over to our control."
+prf.185.d.govt:0 "Left with little choice, the [From.GetAdjective] government has turned over our territory and submitted to [Root.GetAdjective] de facto control."
+prf.185.a:0 "Was there any other doubt?"
+prf.186.t:0 "Bhutan Refuses!"
+prf.186.d:0 "Amazingly, the [From.GetAdjective] has refused our demand, saying that if we wish to retake Arunchal Pradesh then we shall have to do so by force!"
+prf.186.a:0 "Then war it is!"
+prf.186.b:0 "Perhaps another time..."
+prf.187.t:0 "Dealing With Nepal"
+prf.187.d:0 "In the aftermath of the Raj's collapse, [NEP.GetNameDef] utilized the chaotic situation to seize several lowlying districts at the foothills of the Himalayas. With the Delhi government integrated into our fair state, many of the hawks within the cabinet are demanding the return of this unlawfully occupied territory. Some are even calling for the inclusion of Nepal into a wider customs union combined with a military treaty."
+prf.187.a:0 "Demand the return of the occupied districts!"
+prf.187.b:0 "Claim the districts and press for a friendly government!"
+prf.188.t:0 "The Demands of [From.GetNameDef]"
+prf.188.d.return:0 "We are under pressure from the resurgent Indian government in Hyderabad to secede the districts we conquered in the aftermath of the British Raj's collapse."
+prf.188.d.govt:0 "We are under pressure from the resurgent Indian government in Delhi to secede the districts we conquered in the aftermath of the British Raj's collapse. Furthermore the Indians demand that we surrender our de facto independence."
+prf.188.a:0 "We have no choice but to comply"
+prf.188.b:0 "Tell them that mighty Nepal shall defend her conquests!"
+prf.189.t:0 "Nepal Submits"
+prf.189.d.return:0 "Left with little choice, the [From.GetAdjective] government has turned our territory back over to our control."
+prf.189.d.govt:0 "Left with little choice, the [From.GetAdjective] government has turned over our territory and submitted to [Root.GetAdjective] de facto control."
+prf.189.a:0 "Was there any other doubt?"
+prf.190.t:0 "Nepal Refuses!"
+prf.190.d:0 "Amazingly, the [From.GetAdjective] has refused our demand, saying that if we wish to retake the Indian lowlands then we shall have to do so by force!"
+prf.190.a:0 "Then war it is!"
+prf.190.b:0 "Perhaps another time..."
+prf.191.t:0 "[From.GetNameDef] Demands Our Submission"
+prf.191.d:0 "Representatives from the [From.GetAdjective] government arrived in [Root.GetNameDef] today, demanding that we rejoin the newly-resurrected Indian national government - or face the consequences."
+prf.191.a:0 "We have no choice but to comply"
+prf.191.b:0 "Never! Let them come, if they dare!"
+prf.192.t:0 "[From.GetName] Submits"
+prf.192.d:0 "The [From.GetAdjective] government sent representatives today saying that they will submit to our demand and rejoin the newly-reformed Indian nation."
+prf.192.a:0 "Excellent!"
+prf.193.t:0 "[From.GetName] Has Refused!"
+prf.193.d:0 "The [From.GetAdjective] government sent representatives today saying that they will never submit to our demand and rejoin the newly-reformed Indian nation. If we wish their territory, we will need to take it from them by force."
+prf.193.a:0 "Oh, is that so?"
+prf.194.t:0 "[From.GetName] Seizes Indian Territories!"
+prf.194.d:0 "While we are occupied with our war, [From.GetAdjective] soldiers swept into our territories in the Indian Ocean and seized control of our local forces almost before they could lift a finger. [From.GetNameDef] claims these territories to be rightfully theirs, and for the moment there seems to be little we can do about it."
+prf.194.a:0 "This outrage will not go unanswered!"
+prf.195.t:0 "[From.GetNameDef] and the Return of our Indian Colonies"
+prf.195.d:0 "The [From.GetAdjective] government has just proposed a deal that would transfer some of the territories we snatched after the collapse of the British Raj back to [From.GetNameDef]. This could be a good way to improve relations with the national government, but could also set a dangerous precedent in our other colonies."
+prf.195.a:0 "Hand over the isles to the Indians"
+prf.195.b:0 "No, these naval bases are vital to the Kaiserliche Marine"
+prf.196.t:0 "The Transfer of the German Colonies"
+prf.196.d:0 "We have managed to convience the Germans to return some of the colonies taken by the Reich after the Raj collapsed. This is both a great sign of Indo-German friendship, but also proof that we truly have obtained the mandate as legal successor to the British. Glory to India!"
+prf.196.a:0 "Merge the isles into our nation!"
+prf.196.b:0 "Grant Ceylon wide internal autonomy and incorporate the atolls"
+prf.197.t:0 "[From.GetName] Has Refused"
+prf.197.d:0 "Representatives from the [From.GetAdjective] government notified us that returning the Indian Ocean territories is simply impossible, as they are vital to the Kaiserliche Marine."
+prf.197.a:0 "I see..."
+prf.198.t:0 "[From.GetName] Seizes Goa!"
+prf.198.d:0 "[From.GetAdjective] soldiers swept into Goa this morning and seized control of our local forces almost before they could lift a finger. [From.GetNameDef] claims Goa to be rightfully Indian territory, and for the moment there seems to be little we can do about it."
+prf.198.a:0 "This outrage will not go unanswered!"
